--- a/web/css/swiper.css
+++ b/web/css/swiper.css
@@ -1,21 +1,10 @@
-/**
- * Swiper 4.4.6
- * Most modern mobile touch slider and framework with hardware accelerated transitions
- * http://www.idangero.us/swiper/
- *
- * Copyright 2014-2018 Vladimir Kharlampidi
- *
- * Released under the MIT License
- *
- * Released on: December 19, 2018
- */
+
 .swiper-container {
   margin: 0 auto;
   position: relative;
   overflow: hidden;
   list-style: none;
   padding: 0;
-  /* Fix of Webkit flickering */
   z-index: 1;
 }
 .swiper-container-no-flexbox .swiper-slide {
@@ -77,7 +66,7 @@
 .swiper-slide-invisible-blank {
   visibility: hidden;
 }
-/* Auto Height */
+
 .swiper-container-autoheight,
 .swiper-container-autoheight .swiper-slide {
   height: auto;
@@ -93,7 +82,7 @@
   transition-property: transform, height;
   transition-property: transform, height, -webkit-transform;
 }
-/* 3D Effects */
+/* Efeitos 3D */
 .swiper-container-3d {
   -webkit-perspective: 1200px;
   perspective: 1200px;
@@ -144,7 +133,7 @@
   background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
 }
-/* IE10 Windows Phone 8 Fixes */
+
 .swiper-container-wp8-horizontal,
 .swiper-container-wp8-horizontal > .swiper-wrapper {
   -ms-touch-action: pan-y;
@@ -226,7 +215,7 @@
   left: 0;
   width: 100%;
 }
-/* Bullets */
+
 .swiper-pagination-bullets-dynamic {
   overflow: hidden;
   font-size: 0;
@@ -341,7 +330,7 @@ button.swiper-pagination-bullet {
   transition: 200ms transform, 200ms right;
   transition: 200ms transform, 200ms right, 200ms -webkit-transform;
 }
-/* Progress */
+
 .swiper-pagination-progressbar {
   background: rgba(0, 0, 0, 0.25);
   position: absolute;
@@ -400,7 +389,8 @@ button.swiper-pagination-bullet {
 .swiper-pagination-lock {
   display: none;
 }
-/* Scrollbar */
+
+
 .swiper-scrollbar {
   border-radius: 10px;
   position: relative;
@@ -466,7 +456,8 @@ button.swiper-pagination-bullet {
 .swiper-slide-zoomed {
   cursor: move;
 }
-/* Preloader */
+
+
 .swiper-lazy-preloader {
   width: 42px;
   height: 42px;
@@ -507,7 +498,8 @@ button.swiper-pagination-bullet {
     transform: rotate(360deg);
   }
 }
-/* a11y */
+
+
 .swiper-container .swiper-notification {
   position: absolute;
   left: 0;
@@ -613,6 +605,6 @@ button.swiper-pagination-bullet {
   backface-visibility: hidden;
 }
 .swiper-container-coverflow .swiper-wrapper {
-  /* Windows 8 IE 10 fix */
+  
   -ms-perspective: 1200px;
 }
