--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -56,6 +56,10 @@ h6 {
 	line-height: 1.5rem;
 }
 
+a :hover{
+	
+}
+
 .h1-large {
 	font-size: 2.75rem;
 	line-height: 3.5rem;
@@ -138,7 +142,7 @@ a:hover {
 	padding: 0.375rem 1.25rem;
 	border-radius: 20px;
 	background-color: #fff0e2;
-	color: #ff6c02;
+	color: #ff6b01;
 	font-weight: 600;
 	font-size: 0.75rem;
 	line-height: 1.125rem;
