--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -128,6 +128,14 @@ a:hover {
 	background-color: #f9f9f9;
 }
 
+.tag_code{
+	background-color: #222222;
+}
+
+.tag_code p{
+	color: white;
+}
+
 .section-divider {
 	display: inline-block;
 	width: 100%;
