--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -57,6 +57,17 @@ h6 {
 }
 
 
+#dupla img{
+	height: 800px;
+	width: 900px;
+}
+
+@media (max-width: 768px) {
+	#dupla img {
+		height: 450px;
+		width: 500px;
+	}
+}
 
 .h1-large {
 	font-size: 2.75rem;
